--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 p{
-    color: rgb(187, 255, 0);
+    color: rgb(255, 0, 0);
 }
 h3{
-    background-color: sandybrown;
+    background-color: rgb(233, 227, 221);
 }
